# OSCAR

./: README.md  commands.py  image.py  main.py  music.py  pyproject.toml  remind.py  requirements.txt  todoList.py
