[tool.poetry]
name = "repl_python3_OSCAR"
version = "0.1.0"
description = ""
authors = ["momo3404 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
google-api-python-client = "^2.35.0"
youtube_dl = "^2021.12.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
